# active_learning_for_segmentation

./: .gitignore  .gitmodules  README.md
active_3d_planning_app_curiosity/: CMakeLists.txt  package.xml
active_3d_planning_app_curiosity/cfg/experiments/: CityBuilding.yaml
active_3d_planning_app_curiosity/cfg/planners/: airsim.yaml  example_config.yaml  example_config_back.yaml  exploration_planner.yaml  random_moving.yaml  random_moving_with_u.yaml  reconstruction_planner.yaml
active_3d_planning_app_curiosity/include/active_3d_planning_app_curiosity/initialize/: map_package.h
active_3d_planning_app_curiosity/include/active_3d_planning_app_curiosity/map/: uncertainty_aware_map.h
active_3d_planning_app_curiosity/src/experiments/: trajectory_caller_node.cpp
active_3d_planning_app_curiosity/src/initialize/: map_package.cpp
active_3d_planning_app_curiosity/src/map/: uncertainty_aware_map.cpp
embodied_active_learning/: AirsimPath.txt  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml  requirements.txt  results_1621341421.7618551.csv  run.sh  setup.py
embodied_active_learning/cfg/: detectron_labels.csv  nyu40_segmentation_mapping.csv  rviz.rviz
embodied_active_learning/cfg/airsim/: nyuClasses.md  semanticClasses.yaml  semanticClassesCustomFlat.yaml  semanticClassesFlat.yaml
embodied_active_learning/cfg/experiments/: CustomFlat.yaml  GMM_uncertainty.yaml  GMM_uncertainty_05.yaml  GMM_uncertainty_07.yaml  GMM_uncertainty_with_map_replay.yaml  RunScannnetDensity.yaml  SimpleBaseline.yaml  SimpleBaselineFlat.yaml  SimpleBaselineNotRealtime.yaml  SoftMaxCE.yaml  SoftMaxCE_map_replay.yaml  SoftMaxCE_with_dynamic_threshold.yaml  SoftMaxCE_with_dynamic_threshold_02_map_replay.yaml  SoftMaxCE_with_dynamic_threshold_05.yaml  SoftMaxCE_with_dynamic_threshold_05_map_replay.yaml  SoftMaxCE_with_dynamic_threshold_08_map_replay.yaml  SoftMaxCE_with_dynamic_threshold_with_map_replay.yaml  SoftMaxCE_with_map_replay.yaml  experiment_visualization.rviz
embodied_active_learning/cfg/experiments/FullFlat/: boundary.yaml
embodied_active_learning/cfg/experiments/HalfFlat/: boundary.yaml
embodied_active_learning/cfg/experiments/fully_supervised/: NYU_clustering.yaml  NYU_softmax.yaml  NYU_softmax_no_th.yaml
embodied_active_learning/cfg/experiments/self_supervised/: RunScannetDensity.yaml  RunTurtlebot.yaml
embodied_active_learning/cfg/mapper/: single_tsdf.yaml
embodied_active_learning/cfg/planners/: curiosity_planner.yaml  curiosity_planner_late_start.yaml  curiosity_planner_panoptic.yaml  curiosity_planner_trivial_gain.yaml  exploration_planner.yaml  exploration_planner_panoptic.yaml  random_moving_panoptic.yaml  random_walker.yaml  uncertainty_planner.yaml  uncertainty_planner_faster_full_flat.yaml
embodied_active_learning/cfg/planners/fully_supervised/: curiosity_planner_panoptic.yaml  exploration_planner_panoptic.yaml  random_moving_panoptic.yaml
embodied_active_learning/cfg/rviz/: embodied.rviz
embodied_active_learning/launch/: airsim_semseg.launch  cli_experiment.launch  demo.launch  demo_without_planner.launch  experiment.launch  late_start.launch  only_planner.launch  panoptic_run.launch  planner.launch  test.launch
embodied_active_learning/msg/: waypoint_reached.msg
embodied_active_learning/scripts/airsim_semantic_mapping/: available_classes.yaml  available_classes_flat.yaml  test_yaml_regex.py  test_yaml_w_airsim.py
embodied_active_learning/scripts/map_generation/: BigFlatLivingRoomWithDresser.pickle  createMap-Copy1.ipynb  createMap.ipynb  createMinimap.ipynb  map.pickle  map_flat.pickle  map_flat_room.pickle  map_flat_room.pickle_2  map_flat_small.pickle  map_single.pickle  minimap.pickle  random_viewpoint_samples.py
embodied_active_learning/scripts/trajectory_evaluation/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  dist.pickle  distances.pkl  evaluate_segmentation_network.py  random_viewpoint_samples.py  results_1622022610.638523.csv  rrt.py  train_online.py  trajectory.pickle
embodied_active_learning/scripts/trajectory_evaluation/checkpoints/: args.json
embodied_active_learning/scripts/trajectory_evaluation/test/: depth_-001.pfm  depth_0000.pfm  depth_0001.pfm  depth_0002.pfm  depth_0003.pfm  depth_0004.pfm  depth_0005.pfm  depth_0006.pfm  depth_0007.pfm  depth_0008.pfm  depth_0009.pfm  depth_0010.pfm  depth_0011.pfm  (+38 more)
embodied_active_learning/src/: setup.py
embodied_active_learning/src/embodied_active_learning/: setup.py
embodied_active_learning/src/embodied_active_learning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
embodied_active_learning/src/planner/: curiosity_planner_node.cpp  trajectory_caller_node.cpp
embodied_active_learning/tests/: checkWorking.py
embodied_active_learning_core/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
embodied_active_learning_core/src/: setup.py
embodied_active_learning_core/src/embodied_active_learning_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
habitat_ros/: CMakeLists.txt  README.md  package.xml  setup.py
habitat_ros/config/: default_params.yaml
habitat_ros/launch/: controller.launch  habitat_ros.launch  map.launch
habitat_ros/src/: controllers.py  decorators.py  habitat_ros.py  sensor_callbacks.py  simulators.py
habitat_ros_utils/: CMakeLists.txt  README.md  package.xml  setup.py
habitat_ros_utils/src/: transform_node.py
habitat_ros_utils/srv/: PublishTransform.srv
volumetric_labeling/: CMakeLists.txt  README.md  dependencies.rosinstall  package.xml  requirements.txt  setup.py
volumetric_labeling/app/: volumetric_labler_node.cpp
volumetric_labeling/config/: 3d_space_labler.yaml  img_labler_config.yaml  labler_config.yaml  panoptic_config.yaml
volumetric_labeling/include/: volumetric_labler.h
volumetric_labeling/launch/: 3d_labler.launch  dataset_labler.launch  image_labler.launch  voxel_based_labler.launch
volumetric_labeling/src/: setup.py
volumetric_labeling/src/labler/: volumetric_labler.cpp
volumetric_labeling/src/mapper/: volumetric_labler.cpp
volumetric_labeling/srv/: label_request.srv
(+69 files in other folders)
