<?xml version="1.0"?>
<package format="2">
    <name>embodied_active_learning</name>
    <version>0.0.1</version>
    <description>Package that trains a semantic segmentation network inside an Unreal-Airsim environment</description>

    <author email="zrene@ethz.ch">René Zurbrügg</author>
    <maintainer email="zrene@ethz.ch">René Zurbrügg</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>


    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>active_3d_planning_core</depend>
    <depend>active_3d_planning_ros</depend>
    <depend>active_3d_planning_mav</depend>
    <depend>active_3d_planning_voxblox</depend>


</package>
