<?xml version="1.0"?>
<package format="2">
    <name>embodied_active_learning_core</name>
    <version>0.0.1</version>
    <description>Package containing the core functionality of embodied_active_learning which is used in volumetric_labeling aswell as the data collection part </description>

    <author email="zrene@ethz.ch">René Zurbrügg</author>
    <maintainer email="zrene@ethz.ch">René Zurbrügg</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
</package>
